# test_django_celery

./: README.md  pyproject.toml  requirements.txt
app/: admin.py  models.py  tasks.py
app/migrations/: 0001_initial.py
project/: celery.py  settings.py
